# quantitative-finance

./: README.md  pyproject.toml  requirements.txt
src/algo_trading/: ]  api_client.py  constants.py  data_gateway.py  gapped_up_stocks.pkl  logger.py  market_scan.py  market_stats.py  requirements.txt  sma_linear_regression.json  stock_analysis.py  ticker_store.txt
src/algo_trading/ai-ml/sma_linear_regression/: pipeline.py  run_pipeline.py
src/algo_trading/archive/: charts.py  live_chart.py
src/algo_trading/cloud/: storage.py
src/algo_trading/data_gateway/: data_gateway.py  fundamental_data.py  historical_data.py  market_scan.py  pipelines.py  real_time_market_data.py
src/algo_trading/historical_data/: AA.csv  AEM.csv  AGI.csv  ALAB.csv  ALB.csv  AMAT.csv  APP.csv  AU.csv  BBY.csv  BE.csv  BLDR.csv  BMNR.csv  CCL.csv  CDE.csv  CIEN.csv  COHR.csv  CRCL.csv  CRDO.csv  CVNA.csv  DAL.csv  DG.csv  DHI.csv  DKNG.csv  DLTR.csv  DOW.csv  EQX.csv  EXPE.csv  FLUT.csv  FRMI.csv  FSLR.csv  GAP.csv  GDX.csv  GFI.csv  GH.csv  HL.csv  HMY.csv  HOOD.csv  INTC.csv  IONQ.csv  KGC.csv  (+27 more)
src/algo_trading/market_stats/: power_analysis.py
src/algo_trading/v2/: api_client.py  contract_view.py  market_scan.py  req_scanner_parameters.py  req_scanner_parameters.xml  scanner_parameters.py
src/algo_trading/v2/log/: scanner.xml
src/algo_trading/v3/: gapped_up_stocks.pkl  histograms.py  market_scan.py  stock_analysis.py  ticker_store.txt
src/algo_trading/v3/historical_data/: CEG.csv  FTA.csv  GEV.csv  LEN.csv  LITE.csv  LYB.csv  ROST.csv  W.csv
src/cookbook/: iterator_experiment.py
(+5 files in other folders)
