[project]
name = "algo-trading"
version = "0.1.0"
description = ""
authors = [
    {name = "Aymane",email = "aymanecheikh2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "algo_trading", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
